# scipy-csmu

./: LICENSE  README.md  pyproject.toml  requirements.txt
scipy_csmu/: __init__.py  handling.py  matmat.py  norms.py  scaling.py  sparsify.py
tests/: test_handling.py  test_matmat.py  test_norms.py  test_scaling.py  test_sparsify.py
